--- a/News Page.html
+++ b/News Page.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kolaborasa</title>
 </head>
 <body>
-    <h1>Ini Web Bagus</h1>
-    <p>Kapan kapan</p>
-    <h2>oke</h2>
+    
 </body>
 </html>
