ini yang terbaru

--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <Nav>
+    <nav>
+        <h1>Kolaborasa</h1>
         <div>
-            <h1>Kolaborasa</h1>
-            <ul>
-                <li><a href="2. Login Page.html">Login</a></li>
-                <li><a href="2. Login Page.html">Sign Up</a></li>
+            <ul class="Login-Sign Up">
+                <li><a href=""></a>Login</li>
+                <li><a href=""></a>Sign Up</li>
             </ul>
         </div>
-    </Nav>
+    </nav>
 </body>
 </html>
