--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -16,5 +16,11 @@
             </ul>
         </div>
     </nav>
+
+    <div class="hero">
+        <h2>Welcome to Kolaborasa</h2>
+        <p>"Your gateway to seamless collaboration."</p>
+    </div>
+    
 </body>
 </html>
