update kurang bg

--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kolaborasa</title>
-    <link rel="stylesheet" href="Style.css">
-</head>
-<body>
-    <nav>
+    <link rel="stylesheet" href="Style.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="navbar">
         <h1>Kolaborasa</h1>
         <div>
-            <ul class="Login-Sign Up">
-                <li><a href=""></a>Login</li>
-                <li><a href=""></a>Sign Up</li>
-            </ul>
+          <ul>
+            <li><a href="2. Login Page.html">Login</a></li>
+            <li><a href="2. Login Page.html">Sign Up</a></li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <div class="hero">
-        <h2>Welcome to Kolaborasa</h2>
-        <p>"Your gateway to seamless collaboration."</p>
-    </div>
-    
-</body>
+    <header class="header">
+      <div class="hero">
+        <img src="Idea.jpg" alt="" />
+        <div class="hero-text">
+          <h2>Welcome to Kolaborasa</h2>
+          <p>"Your gateway to seamless collaboration."</p>
+          <button>
+            <a href="2. Login Page.html">Get Started</a>
+          </button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
