--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -21,7 +21,7 @@
 
     <header class="header">
       <div class="hero">
-        <img src="Idea.jpg" alt="" />
+        <img src="pexels-pixabay-207607.jpg" alt="" />
         <div class="hero-text">
           <h2>Welcome to Kolaborasa</h2>
           <p>"Your gateway to seamless collaboration."</p>
@@ -31,5 +31,10 @@
         </div>
       </div>
     </header>
+    <footer class="footer-main">
+      <div class="footer-text">
+        <p>© 2025 Kolaborasa. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
