--- a/2. Login Page.html
+++ b/2. Login Page.html
@@ -4,38 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="Style.css" href="">
+    <link rel="stylesheet" href="Style.css" />
 </head>
-<body class="Login Page">
-    <div class="">
+<body class="bg-gradient">
+    <nav class="nav">
+      <div class="navbar">
         <h1>Kolaborasa</h1>
-        <div>
-            <img src="" alt="">
-            <h2>Login</h2>
-            <form action="">
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div>
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit">Login</button>     
-        </div>
-        <div>
-            <h2>Sign Up</h2>
-            <form action="">
-                <div>
-                    <label for="new-email">Email</label>
-                    <input type="email" id="new-email" name="new-email" required>
-                </div>
-                <div>
-                    <label for="new-password">Password</label>
-                    <input type="password" id="new-password" name="new-password" required>
-                </div>
-                <button type="submit">Sign Up</button>
-        </div>
+    </nav>
+    <div class="form-main">
+        <div class="login-container">
+            <div class="login-text">
+                <h2>Login</h2>
+                    <form action="" class="form-login">
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div>
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password" required>
+                        </div>
+                        <button type="submit">Login</button>     
+            </div>    
+            </div>
+        <div class="signup-container">
+            <div class="signup-text">
+                <h2>Sign Up</h2>
+                    <form action="" class="form-signup">
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div>
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password" required>
+                        </div>
+                        <button type="submit">Sign Up</button>  
+                 
+            </div>    
+         </div>
     </div>
+     <footer class="footer-main">
+      <div class="footer-text">
+        <p>© 2025 Kolaborasa. All rights reserved.</p>
+      </div>
+    </footer>
 </body>
 </html>
