--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -21,7 +21,7 @@
 
     <header class="header">
       <div class="hero">
-        <img src="pexels-pixabay-207607.jpg" alt="" />
+        <img src="BG_1.jpg" alt="" />
         <div class="hero-text">
           <h2>Welcome to Kolaborasa</h2>
           <p>"Your gateway to seamless collaboration."</p>
