--- a/Kolaborasa Home Page.html
+++ b/Kolaborasa Home Page.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
+     <link rel="stylesheet" href="Style.css"/>
         
 </head>
 <body>
-    <Nav >
+     <nav class="nav">
+      <div class="navbar">
+        <h1>Kolaborasa</h1>
+      </div>
+    </nav>
         <h1>Kolaborasa</h1>
         <div>
             <a href="index.html">Home</a>
@@ -16,7 +21,12 @@
             <a href=""></a>
             <a href=""></a>
         </div>
-        
-    </Nav>
+
+
+    <footer class="footer-main">
+      <div class="footer-text">
+        <p>© 2025 Kolaborasa. All rights reserved.</p>
+      </div>
+    </footer>
 </body>
 </html>
