--- a/1. Login Home Page.html
+++ b/1. Login Home Page.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <nav class="nav">
+    <nav>
       <div class="navbar">
         <h1>Kolaborasa</h1>
         <div>
           <ul>
             <li><a href="2. Login Page.html">Login</a></li>
-            <li><a href="2. Login Page.html">Sign Up</a></li>
+            <li><a href="3.Signup Page.html">Sign Up</a></li>
           </ul>
         </div>
       </div>
