--- a/2. Login Page.html
+++ b/2. Login Page.html
@@ -6,45 +6,28 @@
     <title>Login</title>
     <link rel="stylesheet" href="Style.css" />
 </head>
-<body class="bg-gradient">
-    <nav class="nav">
+<body>
+    <nav>
       <div class="navbar">
         <h1>Kolaborasa</h1>
+      </div>
     </nav>
-    <div class="form-main">
-        <div class="login-container">
-            <div class="login-text">
-                <h2>Login</h2>
-                    <form action="" class="form-login">
-                        <div>
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div>
-                            <label for="password">Password</label>
-                            <input type="password" id="password" name="password" required>
-                        </div>
-                        <button type="submit">Login</button>     
-            </div>    
-            </div>
-        <div class="signup-container">
-            <div class="signup-text">
-                <h2>Sign Up</h2>
-                    <form action="" class="form-signup">
-                        <div>
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div>
-                            <label for="password">Password</label>
-                            <input type="password" id="password" name="password" required>
-                        </div>
-                        <button type="submit">Sign Up</button>  
-                 
-            </div>    
-         </div>
+    <div class="login-container">
+        <h2>Login to Kolaborasa</h2>
+        <form action="#" method="post" class="login-form">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        
+            <button type="submit">Login</button>
+        </form>>
+            <label class="checkbox">
+              <input type="checkbox" name="remember"> Remember Me
+        </form>
     </div>
-     <footer class="footer-main">
+    <footer class="footer-main">
       <div class="footer-text">
         <p>© 2025 Kolaborasa. All rights reserved.</p>
       </div>
