--- a/Kolaborasa Home Page.html
+++ b/Kolaborasa Home Page.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-        
+    <link rel="stylesheet" href="Style.css" />
 </head>
 <body>
-    <Nav >
+    <nav>
+      <div class="navbar">
         <h1>Kolaborasa</h1>
         <div>
-            <a href="index.html">Home</a>
-            <a href="News Page.html">News</a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+          <ul>
+            <li><a href="2. Login Page.html">Login</a></li>
+            <li><a href="2. Login Page.html">Sign Up</a></li>
+          </ul>
         </div>
-        
-    </Nav>
+      </div>
+    </nav>
 </body>
 </html>
