--- a/Kolaborasa Home Page.html
+++ b/Kolaborasa Home Page.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
      <link rel="stylesheet" href="Style.css"/>
-        
 </head>
 <body>
      <nav class="nav">
@@ -13,6 +12,10 @@
         <h1>Kolaborasa</h1>
       </div>
     </nav>
+    <header class="header">
+      <div class="hero">
+        <img src="">
+      </div>
         <h1>Kolaborasa</h1>
         <div>
             <a href="index.html">Home</a>
@@ -21,8 +24,6 @@
             <a href=""></a>
             <a href=""></a>
         </div>
-
-
     <footer class="footer-main">
       <div class="footer-text">
         <p>© 2025 Kolaborasa. All rights reserved.</p>
