--- a/News Page.html
+++ b/News Page.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
+    <link rel="stylesheet" href="news page.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <h1>Kolaborasa</h1>
+        <div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Inventory</a></li>
+                <li><a href="#">Profil</a></li>
+            </ul>
+        </div>
+    </nav>
+     <!-- Hero Section -->
+      <div class="hero">
+        <img src="download (9).jpg" alt="" />
+        <div class="hero-text">
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Kolaborasa</h1>
+            <p>Gabungkan kekuatan, ide, dan kreativitas dalam platform kolaborasi terbaik untuk mencapai tujuan bersama</p>
+        </div>
+    </section>
+
     
+     <footer class="footer-main">
+      <div class="footer-text">
+        <p>© 2025 Kolaborasa. All rights reserved.</p>
+      </div>
+    </footer>
 </body>
 </html>
