--- a/News Page.html
+++ b/News Page.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Search</a></li>
-                <li><a href="#">Inventory</a></li>
+                <li><a href="inventory.html">Inventory</a></li>
                 <li><a href="#">Profil</a></li>
             </ul>
         </div>
