Update Home Page

--- a/Kolaborasa Home Page.html
+++ b/Kolaborasa Home Page.html
@@ -4,34 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-<<<<<<< HEAD
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="inventory.css" />
 </head>
 <body>
-    <nav>
-      <div class="navbar">
-=======
-     <link rel="stylesheet" href="Style.css"/>
-        
-</head>
-<body>
-     <nav class="nav">
-      <div class="navbar">
-        <h1>Kolaborasa</h1>
-      </div>
-    </nav>
->>>>>>> aa8cc0543e2c075ff811c15f32c50b36adabaeb8
+  <nav class="navbar">
         <h1>Kolaborasa</h1>
         <div>
-          <ul>
-            <li><a href="2. Login Page.html">Login</a></li>
-            <li><a href="2. Login Page.html">Sign Up</a></li>
-          </ul>
+            <ul>
+                <li><a href="Kolaborasa Home Page.html">Home</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="inventory.html">Inventory</a></li>
+                <li><a href="#">Profil</a></li>
+            </ul>
         </div>
-<<<<<<< HEAD
-      </div>
     </nav>
-=======
+    
+    <header class="header-main">
+      <div class="header-text">
+        <h2>Welcome to Kolaborasa</h2>
+        <p>Your gateway to seamless collaboration.</p>
+      </div>
 
 
     <footer class="footer-main">
@@ -39,6 +31,6 @@
         <p>© 2025 Kolaborasa. All rights reserved.</p>
       </div>
     </footer>
->>>>>>> aa8cc0543e2c075ff811c15f32c50b36adabaeb8
+
 </body>
 </html>
