--- a/inventory.html
+++ b/inventory.html
@@ -12,9 +12,9 @@
         <h1>Kolaborasa</h1>
         <div>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="Kolaborasa Home Page.html">Home</a></li>
                 <li><a href="#">Search</a></li>
-                <li><a href="#">Inventory</a></li>
+                <li><a href="inventory.html">Inventory</a></li>
                 <li><a href="#">Profil</a></li>
             </ul>
         </div>
