--- a/4. Kolaborasa Home Page.html
+++ b/4. Kolaborasa Home Page.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-    <link rel="stylesheet" href="inventory.css" />
+    <link rel="stylesheet" href="(2). Home Page.css" />
 </head>
 <body>
   <nav class="navbar">
         <h1>Kolaborasa</h1>
         <div>
             <ul>
-                <li><a href="Kolaborasa Home Page.html">Home</a></li>
+                <li><a href="4. Kolaborasa Home Page.html">Home</a></li>
                 <li><a href="#">Search</a></li>
-                <li><a href="inventory.html">Inventory</a></li>
+                <li><a href="5. inventory.html">Inventory</a></li>
                 <li><a href="#">Profil</a></li>
             </ul>
         </div>
