--- a/5. inventory.html
+++ b/5. inventory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory</title>
-    <link rel="stylesheet" href="inventory.css">
+    <link rel="stylesheet" href="(3). inventory.css">
 </head>
 <body>
     <!--Bagian Navbar-->
@@ -12,9 +12,9 @@
         <h1>Kolaborasa</h1>
         <div>
             <ul>
-                <li><a href="Kolaborasa Home Page.html">Home</a></li>
+                <li><a href="4. Kolaborasa Home Page.html">Home</a></li>
                 <li><a href="#">Search</a></li>
-                <li><a href="inventory.html">Inventory</a></li>
+                <li><a href="5. inventory.html">Inventory</a></li>
                 <li><a href="#">Profil</a></li>
             </ul>
         </div>
