--- a/News Page.html
+++ b/News Page.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kolaborasa</title>
-    <link rel="stylesheet" href="news page.css" />
+    <title>Kolaborasa - Platform Kolaborasi</title>
+    <link rel="stylesheet" href="news page.css">
 </head>
 <body>
+    <!-- Navigation -->
     <nav class="navbar">
-        <h1>Kolaborasa</h1>
-        <div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Inventory</a></li>
-                <li><a href="#">Profil</a></li>
-            </ul>
-        </div>
+        <h1 class="logo">Kolaborasa</h1>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#search">Search</a></li>
+            <li><a href="#profile">Profil</a></li>
+        </ul>
     </nav>
-     <!-- Hero Section -->
-      <div class="hero">
-        <img src="download (9).jpg" alt="" />
-        <div class="hero-text">
+    <!-- Hero Section -->
     <section class="hero" id="home">
+        <div class="hero-background">
+            <img src="download (9).jpg" alt="Komunitas Kolaborasi Smart City">
+        </div>
         <div class="hero-content">
             <h1>Kolaborasa</h1>
             <p>Gabungkan kekuatan, ide, dan kreativitas dalam platform kolaborasi terbaik untuk mencapai tujuan bersama</p>
         </div>
     </section>
 
-    
-     <footer class="footer-main">
-      <div class="footer-text">
-        <p>© 2025 Kolaborasa. All rights reserved.</p>
-      </div>
+    <!-- Footer -->
+    <footer class="footer-main">
+        <div class="footer-text">
+            <p>&copy; 2025 Kolaborasa. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
