--- a/3.Signup Page.html
+++ b/3.Signup Page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="(1). Style.css" />
 </head>
 <body>
     <nav>
@@ -20,7 +20,7 @@
     </nav>
     <div class="signup-container">
         <h2 class="signup-text">Get Started Now!</h2>
-        <img src="BG_3.jpg" alt="">
+        <img src="BG3.jpeg" alt="">
         <form action="#" method="post" class="signup-form">
             <label for="username">Nama</label>
             <input type="text" id="username" name="username" required>
