--- a/4. Kolaborasa Home Page.html
+++ b/4. Kolaborasa Home Page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
     <link rel="stylesheet" href="(2). Home Page.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar">
@@ -12,9 +13,8 @@
         <div>
             <ul>
                 <li><a href="4. Kolaborasa Home Page.html">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="5. inventory.html">Inventory</a></li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="5. News.html">News</a></li>
+                <li><a href="6. Profil Page.html">Profil</a></li>
             </ul>
         </div>
     </nav>
@@ -23,6 +23,27 @@
       <div class="header-text">
         <h2>Welcome to Kolaborasa</h2>
         <p>Your gateway to seamless collaboration.</p>
+        <div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Selo_Foto_You_Tube_Ridwan_Hanif_11zon_5f861807c7.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="62398592_1004.webp" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="berita-Muhamad-Asyir-Zarkasih.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
       </div>
 
 
@@ -31,6 +52,6 @@
         <p>© 2025 Kolaborasa. All rights reserved.</p>
       </div>
     </footer>
-
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
