--- a/5. News.html
+++ b/5. News.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory</title>
+    <title>News</title>
     <link rel="stylesheet" href="(3). inventory.css">
 </head>
 <body>
@@ -13,9 +13,8 @@
         <div>
             <ul>
                 <li><a href="4. Kolaborasa Home Page.html">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="5. inventory.html">Inventory</a></li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="5. News.html">News</a></li>
+                <li><a href="6. Profil Page.html">Profil</a></li>
             </ul>
         </div>
     </nav>
