--- a/2. Login Page.html
+++ b/2. Login Page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="(1). Style.css" />
 </head>
 <body>
     <nav>
@@ -20,7 +20,7 @@
     </nav>
     <div class="login-container">
         <h2 class="login-text">Welcome back!</h2>
-        <img src="BG_3.jpg" alt="">
+        <img src="BG2.jpeg" alt="">
         <form action="#" method="post" class="login-form">
             <label for="username">Nama</label>
             <input type="text" id="username" name="username" required>
