--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -10,10 +10,9 @@
         <h1>Kolaborasa</h1>
         <div>
             <ul>
-                <li><a href="Kolaborasa Home Page.html">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="6. News Page.html">Inventory</a></li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="8. home page.html">Home</a></li>
+                <li><a href="5. News.html">News</a></li>
+                <li><a href="7. Profil Page.html">Profil</a></li>
             </ul>
         </div>
     </nav>
