--- a/1. Landing Page.html
+++ b/1. Landing Page.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kolaborasa</title>
-    <link rel="stylesheet" href="(1). Style.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="navbar">
-        <h1>Kolaborasa</h1>
-        <div>
-          <ul>
-            <li><a href="2. Login Page.html">Login</a></li>
-            <li><a href="3.Signup Page.html">Sign Up</a></li>
-          </ul>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kolaborasa - Home</title>
+    <link rel="stylesheet" href="(1). Style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="logo">Kolaborasa</div>
+        <div class="nav-links">
+            <a href="2. Login Page.html">Login</a>
+            <a href="3.Signup Page.html">Sign Up</a>
         </div>
-      </div>
     </nav>
-    <header class="header">
-      <div class="hero">
-        <img src="BG1.jpg" alt="" />
-        <div class="hero-text">
-          <h2>Welcome to Kolaborasa</h2>
-          <p>"Your gateway to seamless collaboration."</p>
-          <button>
-            <a href="2. Login Page.html">Get Started</a>
-          </button>
+
+    <div class="container">
+        <div class="welcome-card">
+            <h1>Welcome to Kolaborasa</h1>
+            <p>"Your gateway to seamless collaboration."</p>
+            <button id="btnGetStarted" class="btn-action small">Get Started</button>
         </div>
-      </div>
-    </header>
-    <footer class="footer-main">
-      <div class="footer-text">
-        <p>© 2025 Kolaborasa. All rights reserved.</p>
-      </div>
+    </div>
+
+    <footer class="main-footer">
+        © 2025 Kolaborasa. All rights reserved.
     </footer>
-  </body>
+
+    <script src="Script.js"></script>
+        
+</body>
 </html>
