--- a/3.Signup Page.html
+++ b/3.Signup Page.html
@@ -36,7 +36,7 @@
                         <input type="checkbox" id="terms">
                         <label for="terms">I agree to the terms & policy</label>
                     </div>
-                    <button type="submit" class="btn-signup">SignUp</button>
+                    <button type="submit" class="btn-signup">Sign Up</button>
                 </form>
                 <p class="footer-link">Have an Account? <a href="2. Login Page.html">Sign In</a></p>
             </div>
@@ -49,7 +49,7 @@
         &copy; 2025 Kolaborasa. All rights reserved.
     </footer>
 
-    <script src="#JavaScript.js"></script>
+    <script src="Script.js"></script>
 
 </body>
 </html>
