Update Terbaru Profil dan file

--- a/2. Login Page.html
+++ b/2. Login Page.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Kolaborasa</div>
+        <div class="logo">
+          <a href="1. Landing Page.html" class="logo-text">Kolaborasa</a>
+        </div>
         <div class="nav-links">
             <a href="2. Login Page.html">Login</a>
             <a href="3.Signup Page.html">Sign Up</a>
@@ -32,6 +34,9 @@
                         <label><input type="checkbox"> Remember Me</label>
                     </div>
                     <button type="submit" class="btn-login">Login</button>
+                    <button type="button" class="btn-google">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="G">Sign in with Google
+                    </button>
                 </form>
                 <p class="signup-text">Don't have an Account? <a href="3.Signup Page.html">Sign up</a></p>
             </div>
@@ -39,10 +44,54 @@
             <div class="login-image"></div>
         </div>
     </div>
-    
+
     <footer class="main-footer">
-        &copy; 2025 Kolaborasa. All rights reserved.
+    <div class="footer-container">
+        <div class="footer-brand">
+            <div class="footer-logo">
+                <img src="logo.png" alt="Kolaborasa Logo">
+            </div>
+            <h2 class="brand-name">KOLABORASA</h2>
+            <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
+        </div>
+
+        <div class="footer-links-wrapper">
+            <div class="footer-column">
+                <h3>COMPANY</h3>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>RESOURCES</h3>
+                <ul>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>LEGAL</h3>
+                <ul>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookies Policy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr class="footer-divider">
+
+    <div class="footer-bottom">
+        <p class="copyright">© 2025 Kolaborasa Inc. All rights reserved.</p>
+        <div class="social-icons">
+            <a href="#"><img src="Instagram Logo.png" alt="Instagram"></a>
+        </div>
+    </div>
     </footer>
+
     <script src="Script.js"></script>
+
 </body>
 </html>
