--- a/5. News.html
+++ b/5. News.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
-    <link rel="stylesheet" href="(3). inventory.css">
+    <link rel="stylesheet" href="(2). News.css">
 </head>
 <body>
     <!--Bagian Navbar-->
     <nav class="navbar">
-        <h1>Kolaborasa</h1>
-        <div>
-            <ul>
-                <li><a href="8. home page.html">Home</a></li>
-                <li><a href="5. News.html">News</a></li>
-                <li><a href="7. Profil Page.html">Profil</a></li>
-            </ul>
-        </div>
+        <h1 class="logo">Kolaborasa</h1>
+        <ul class="nav-links">
+            <li><a href="8. home page.html">Home</a></li>
+            <li><a href="5. News.html">News</a></li>
+            <li><a href="7. Profil Page.html">Profil</a></li>
+        </ul>
     </nav>
 
     <!--Bagian Inventory-->
