--- a/6. News Page.html
+++ b/6. News Page.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-    <link rel="stylesheet" href="news page.css" />
+    <link rel="stylesheet" href="(3). news.css" />
 </head>
 <body>
-    <nav class="navbar">
-        <h1>Kolaborasa</h1>
-        <div>
-            <ul>
-                <li><a href="8. home page.html">Home</a></li>
-                <li><a href="5. News.html">News</a></li>
-                <li><a href="7. Profil Page.html">Profil</a></li>
-            </ul>
-        </div>
+   <nav class="navbar">
+        <h1 class="logo">Kolaborasa</h1>
+        <ul class="nav-links">
+            <li><a href="8. home page.html">Home</a></li>
+            <li><a href="5. News.html">News</a></li>
+            <li><a href="7. Profil Page.html">Profil</a></li>
+        </ul>
     </nav>
      <!-- Hero Section -->
       <div class="hero">
