--- a/3.Signup Page.html
+++ b/3.Signup Page.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kolaborasa - Get Started</title>
+    <title>Kolaborasa - Sign Up</title>
     <link rel="stylesheet" href="(1). Style.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Kolaborasa</div>
+        <div class="logo">
+          <a href="1. Landing Page.html" class="logo-text">Kolaborasa</a>
+        </div>
         <div class="nav-links">
             <a href="2. Login Page.html">Login</a>
             <a href="3.Signup Page.html">Sign Up</a>
@@ -46,7 +48,49 @@
     </main>
 
     <footer class="main-footer">
-        &copy; 2025 Kolaborasa. All rights reserved.
+    <div class="footer-container">
+        <div class="footer-brand">
+            <div class="footer-logo">
+                <img src="logo.png" alt="Kolaborasa Logo">
+            </div>
+            <h2 class="brand-name">KOLABORASA</h2>
+            <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
+        </div>
+
+        <div class="footer-links-wrapper">
+            <div class="footer-column">
+                <h3>COMPANY</h3>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>RESOURCES</h3>
+                <ul>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>LEGAL</h3>
+                <ul>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookies Policy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr class="footer-divider">
+
+    <div class="footer-bottom">
+        <p class="copyright">© 2025 Kolaborasa Inc. All rights reserved.</p>
+        <div class="social-icons">
+            <a href="#"><img src="Instagram Logo.png" alt="Instagram"></a>
+        </div>
+    </div>
     </footer>
 
     <script src="Script.js"></script>
