--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
+    <link rel="stylesheet" href="(3). news page.css">
 </head>
 <body>
     <nav class="navbar">
