--- a/8. home page.html
+++ b/8. home page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa - Platform Kolaborasi</title>
-    <link rel="stylesheet" href="news page.css">
+    <link rel="stylesheet" href="(3). news page.css">
 </head>
 <body>
     <!-- Navigation -->
