--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -17,5 +17,53 @@
             </ul>
         </div>
     </nav>
+
+    
+    <footer class="main-footer">
+    <div class="footer-container">
+        <div class="footer-brand">
+            <div class="footer-logo">
+                <img src="logo.png" alt="Kolaborasa Logo">
+            </div>
+            <h2 class="brand-name">KOLABORASA</h2>
+            <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
+        </div>
+
+        <div class="footer-links-wrapper">
+            <div class="footer-column">
+                <h3>COMPANY</h3>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>RESOURCES</h3>
+                <ul>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>LEGAL</h3>
+                <ul>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookies Policy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr class="footer-divider">
+
+    <div class="footer-bottom">
+        <p class="copyright">© 2025 Kolaborasa Inc. All rights reserved.</p>
+        <div class="social-icons">
+            <a href="#"><img src="Instagram Logo.png" alt="Instagram"></a>
+        </div>
+    </div>
+    </footer>
+
 </body>
 </html>
