--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -13,7 +13,7 @@
                 <li><a href="Kolaborasa Home Page.html">Home</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="6. News Page.html">Inventory</a></li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="7. Profil Page.html">Profil</a></li>
             </ul>
         </div>
     </nav>
