--- a/8. home page.html
+++ b/8. home page.html
@@ -20,13 +20,32 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-background">
-            <img src="download (9).jpg" alt="Komunitas Kolaborasi Smart City">
+            <img src="◌ 🖇️ ⊹ ⁺ 🐇⋅ִֹ𓂋 ᰔᩚ.jpg" alt="Komunitas Kolaborasi Smart City" class="hero-bg">
         </div>
+        <div class="hero-overlay">
+
         <div class="hero-content">
-            <h1>Kolaborasa</h1>
+            <h1>WELCOME <br>KOLABORASA</h1>
+            <div class="hero-subbox">
             <p>Gabungkan kekuatan, ide, dan kreativitas dalam platform kolaborasi terbaik untuk mencapai tujuan bersama</p>
         </div>
+    </div>
+        </div>    
     </section>
+
+  <!-- News section -->
+    <main class="content">
+        <section class="news-section">
+            <h2 class="news-title">News</h2>
+
+            <!-- contoh 3 kartu berita kosong -->
+            <div class="news-grid">
+                <article class="news-card"></article>
+                <article class="news-card"></article>
+                <article class="news-card"></article>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer-main">
