minta push ulang dong yang kalian

--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -23,7 +23,7 @@
       <!-- Top bar -->
       <header class="topbar">
         <div class="top-links">
-          <a href="#">Home</a>
+          <a href="">Home</a>
           <a href="#">News</a>
           <a href="#">Profil</a>
         </div>
