--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -12,9 +12,9 @@
       <!-- Top bar -->
       <header class="topbar">
         <div class="top-links">
-          <a href="">Home</a>
-          <a href="#">News</a>
-          <a href="#">Profil</a>
+          <a href="8. home page.html">Home</a>
+          <a href="5. News.html">News</a>
+          <a href="7. Profil Page.html">Profil</a>
         </div>
       </header>
 
