--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -95,6 +95,13 @@
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
         </div>
 
+        <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+        </div>
+        
         <div class="footer-links-wrapper">
             <div class="footer-column">
                 <h3>COMPANY</h3>
