--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -3,22 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Kolaborasa - Profil</title>
-  <link rel="stylesheet" href="profile.css">
+  <link rel="stylesheet" href="(4). profile.css">
 </head>
 <body>
-  <div class="layout">
-    <!-- Main content -->
-    <div class="main">
-      <!-- Top bar -->
-      <header class="topbar">
-        <div class="top-links">
-          <a href="8. home page.html">Home</a>
-          <a href="5. News.html">News</a>
-          <a href="7. Profil Page.html">Profil</a>
-        </div>
-      </header>
-
-      <!-- Content -->
+   <!--Bagian Navbar-->
+    <nav class="navbar">
+        <h1 class="logo">Kolaborasa</h1>
+        <ul class="nav-links">
+            <li><a href="8. home page.html">Home</a></li>
+            <li><a href="5. News.html">News</a></li>
+            <li><a href="7. Profil Page.html">Profil</a></li>
+        </ul>
+    </nav>
+  
+    <!-- Content -->
       <main class="content">
         <section class="profile-card">
           <div class="card-header">
@@ -101,7 +99,7 @@
                 <p>info@kolaborasa.id</p>
             </div>
         </div>
-        
+
         <div class="footer-links-wrapper">
             <div class="footer-column">
                 <h3>COMPANY</h3>
