update lagi ke 1000000x

--- a/6. News Page.html
+++ b/6. News Page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kolaborasa</title>
-    <link rel="stylesheet" href="(3). news.css" />
+    <link rel="stylesheet" href="(3). news page.css" />
 </head>
 <body>
    <nav class="navbar">
