--- a/12. Profil Page edit.html
+++ b/12. Profil Page edit.html
@@ -11,7 +11,7 @@
         <ul class="nav-links">
             <li><a href="8. home page.html">Home</a></li>
             <li><a href="5. News.html">News</a></li>
-            <li><a href="7. Profil Page .html">Profil</a></li>
+            <li><a href="7. Profil Page.html">Profil</a></li>
         </ul>
     </nav>
     <!-- Content -->
@@ -72,7 +72,7 @@
 
             <div class="form-actions">
               <button type="button" class="btn btn-cancel">Cancel</button>
-              <button type="submit" class="btn btn-save">Edit</button>
+              <button type="submit" class="btn btn-save">Save</button>
             </div>
           </form>
         </section>
