--- a/2. Login Page.html
+++ b/2. Login Page.html
@@ -45,6 +45,7 @@
         </div>
     </div>
 
+<!--Bagian Footer-->
     <footer class="main-footer">
     <div class="footer-container">
         <div class="footer-brand">
@@ -53,7 +54,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
@@ -90,7 +96,7 @@
         </div>
     </div>
     </footer>
-
+    
     <script src="Script.js"></script>
 
 </body>
