--- a/6. News Page.html
+++ b/6. News Page.html
@@ -27,6 +27,7 @@
     </section>
 
     
+    <!--Bagian Footer-->
     <footer class="main-footer">
     <div class="footer-container">
         <div class="footer-brand">
@@ -35,7 +36,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
