--- a/1. Landing Page.html
+++ b/1. Landing Page.html
@@ -25,6 +25,7 @@
         </div>
     </div>
 
+    <!--Bagian Footer-->
     <footer class="main-footer">
     <div class="footer-container">
         <div class="footer-brand">
@@ -33,7 +34,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
@@ -69,7 +75,7 @@
             <a href="#"><img src="Instagram Logo.png" alt="Instagram"></a>
         </div>
     </div>
-</footer>
+    </footer>
 
     <script src="Script.js"></script>
         
