--- a/10. deskripsi.html
+++ b/10. deskripsi.html
@@ -89,7 +89,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
@@ -126,5 +131,6 @@
         </div>
     </div>
     </footer>
+    
 </body>
 </html>
