--- a/5. News.html
+++ b/5. News.html
@@ -179,7 +179,7 @@
     </div>
 
 
-    <!--Bagian Footer-->
+   <!--Bagian Footer-->
     <footer class="main-footer">
     <div class="footer-container">
         <div class="footer-brand">
@@ -188,7 +188,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
@@ -225,6 +230,6 @@
         </div>
     </div>
     </footer>
-
+    
 </body>
 </html>
