--- a/7. Profil Page.html
+++ b/7. Profil Page.html
@@ -40,7 +40,7 @@
 
             <div class="form-group">
               <label>Country</label>
-              <input type="text" value="Jakarta">
+              <input type="text" placeholder="Country">
             </div>
 
             <div class="form-group">
@@ -71,7 +71,7 @@
             </div>
 
             <div class="form-actions">
-              <button type="button" class="btn btn-cancel">Cancel</button>
+              <button type="button" class="btn btn-cancel">Logout</button>
               <button type="submit" class="btn btn-save">Edit</button>
             </div>
           </form>
