--- a/8. home page.html
+++ b/8. home page.html
@@ -72,6 +72,7 @@
         </div>
     </section>
 
+    <!--Bagian Footer-->
     <footer class="main-footer">
     <div class="footer-container">
         <div class="footer-brand">
@@ -80,7 +81,12 @@
             </div>
             <h2 class="brand-name">KOLABORASA</h2>
             <p class="brand-slogan">"Your gateway to seamless collaboration."</p>
-        </div>
+            <div class="footer-contact">
+                <p><strong>Contact Us:</strong></p>
+                <p>+62 812 3456 7890</p>
+                <p>info@kolaborasa.id</p>
+            </div>
+          </div>
 
         <div class="footer-links-wrapper">
             <div class="footer-column">
@@ -117,6 +123,6 @@
         </div>
     </div>
     </footer>
-
+    
 </body>
 </html>
